--- a/calculadora.html
+++ b/calculadora.html
@@ -8,7 +8,7 @@
 
 <style> /* Css Incorporada */
     body{
-         background-color: aquamarine;
+         background-color: rgb(120, 221, 187);
          background-image: linear-gradient(to right,aquamarine,#b8b8ca);
     }
     /* Botões */
